--- a/src/common/icon.mixins.scss
+++ b/src/common/icon.mixins.scss
@@ -1,5 +1,6 @@
+@import "variables";
+
 @mixin icon($icon) {
-    @extend ".fa-#{$icon} !optional";
     font-family: $font-family;
     &::before {
         font-family: FontAwesome;
