--- a/src/openlmis-table/sticky.scss
+++ b/src/openlmis-table/sticky.scss
@@ -31,7 +31,7 @@ Tables can have sticky columns to keep important elements within view.
 
 Styleguide 4.4
 */
-
+@import "../common/variables";
 
 
 td,
