--- a/src/common/buttons.scss
+++ b/src/common/buttons.scss
@@ -73,6 +73,9 @@ Toggle can be used to give user an option of seeing certain elements in differen
 Styleguide 1.3
 */
 
+@import "../common/button.mixins";
+@import "../common/icon.mixins";
+
 $button-color-default: $light-gray !default;
 $button-color-primary: $link-color !default;
 $button-color-danger: $brand-danger !default;
@@ -85,12 +88,12 @@ button {
     }
 
     &.danger {
-        @extend button.primary;
+        @extend .primary !optional;
         @include button($button-color-danger);
     }
 
     &.add {
-        @extend button.primary;
+        @extend .primary !optional;
         @include button($button-color-default);
         @include button-icon('plus');
     }
@@ -103,7 +106,7 @@ button.close {
 }
 
 .button-group {
-    @extend .clearfix;
+    @extend .clearfix !optional;
     margin-left: -0.5em;
     margin-right: -0.5em;
 
@@ -149,26 +152,26 @@ button.close {
             @include button($button-color-primary);
         }
 
-        &:not(:first-child) {
-          @include border-left-radius(0);
-        }
-        &:not(:last-child) {
-          @include border-right-radius(0);
-        }
+        //&:not(:first-child) {
+        //  @include border-left-radius(0);
+        //}
+        //&:not(:last-child) {
+        //  @include border-right-radius(0);
+        //}
     }
 }
 
 .btn,
 input[type=button] {
-    @extend button;
+    @extend button !optional;
 }
 
 .btn-primary,
 input[type=submit] {
-    @extend button.primary;
+    @extend .primary !optional;
 }
 
 .btn-add,
 input[type=submit].add {
-    @extend button.add;
+    @extend .add !optional;
 }
