--- a/src/common/dropdown.scss
+++ b/src/common/dropdown.scss
@@ -1,3 +1,5 @@
+@import "icon.mixins";
+
 .dropdown-link {
 
     display: block;
@@ -7,7 +9,7 @@
     &:hover,
     &:focus{
       text-decoration: none;
-      color: $link-hover-color;
+      color: $link-color-hover;
     }
     &[disabled],
     &[disabled]:hover,
@@ -37,7 +39,7 @@
         }
 
         li a {
-            @extend .dropdown-link;
+            @extend .dropdown-link !optional;
         }
     }
 
