--- a/src/openlmis-table-form/td-has-single-input-control.scss
+++ b/src/openlmis-table-form/td-has-single-input-control.scss
@@ -1,3 +1,5 @@
+@import "../openlmis-table/tables";
+
 td:focus {
     outline: none;
     box-shadow: inset 0em 0em 0.5em $brand-primary;
@@ -13,10 +15,10 @@ td.has-single-input-control{
 td.has-single-input-control.is-invalid {
     padding-right: $table-cell-padding;
     &::before{
-        content: "";   
+        content: "";
     }
-    
+
     > [input-control] {
-        @extend .is-invalid;
+        @extend .is-invalid !optional;
     }
 }
