--- a/src/openlmis-table/tbody-title.scss
+++ b/src/openlmis-table/tbody-title.scss
@@ -77,6 +77,7 @@ directive for more details.](../../docs/#/api/openlmis.table:tbodyTitle)
 
 Styleguide 4.3
 */
+@import "../common/variables";
 
 .openlmis-table > tbody > tr.title:first-child > td{
     margin: 0px;
