--- a/src/common/_buttons.scss
+++ b/src/common/_buttons.scss
@@ -106,6 +106,9 @@ button.close {
     @extend .clearfix;
     margin-left: -0.5em;
     margin-right: -0.5em;
+    display: block;
+    border: 0px !important;
+    flex: content;
 
     > *,
     > button {
