OLMIS-7316 Migration to bootstrap 4

--- a/src/common/_dropdown.scss
+++ b/src/common/_dropdown.scss
@@ -50,3 +50,14 @@
         }
     }
 }
+
+.navbar-collapse {
+    display: block;
+    .navbar li{
+        a {
+            @media(min-width: $res-md){
+                color: $black;
+            }
+        }
+    }
+}
