--- a/src/common/_buttons.scss
+++ b/src/common/_buttons.scss
@@ -108,7 +108,9 @@ button.close {
     margin-right: -0.5em;
     display: block;
     border: 0px !important;
-    flex: content;
+    flex: content !important;
+    padding: 0.2em 0;
+    background-color: transparent !important;
 
     > *,
     > button {
