--- a/src/openlmis-table/_openlmis-table-container.scss
+++ b/src/openlmis-table/_openlmis-table-container.scss
@@ -173,6 +173,20 @@ Styleguide 4.1
         > table {
             @extend .openlmis-table;
             width: 100%;
+            border: 0px;
+            border-collapse: collapse !important;
+            font-size: 14px;
+            line-height: 1.42857;
+  
+          tr {
+            th {
+              border: #ddd 1px solid;
+            }
+          
+            td {
+              border: #ddd 1px solid;
+            }
+          }
         }
     }
 
