OLMIS-7467: Move React base fields components to ui-components

--- a/src/common/_variables.scss
+++ b/src/common/_variables.scss
@@ -8,6 +8,7 @@ $brand-blue: #49baeb !default;
 $purple: #8366a5 !default;
 
 $white: #ffffff !default;
+$very-light-gray: #f0f0f0 !default;
 $light-gray: #e4e4e4 !default;
 $gray: #58585a !default;
 $dark-gray: #333333 !default;
