OLMIS-7458: Added edit button class

--- a/src/common/_buttons.scss
+++ b/src/common/_buttons.scss
@@ -94,6 +94,12 @@ button {
         @include button($button-color-default);
         @include button-icon('plus');
     }
+
+    &.edit {
+        @extend button.primary;
+        @include button-icon('pencil-square-o');
+        display: flex !important;
+    }
 }
 
 button.close {
