--- a/src/react-components/_react-components.scss
+++ b/src/react-components/_react-components.scss
@@ -262,3 +262,48 @@ strong {
     }
   }
 }
+
+.multiselect {
+  width: 544px;
+  box-shadow: inset 0 0 0.5em #bebebe;
+  border-radius: 4px;
+
+  .multiselect__selected {
+    border:solid 1px #D9D9D9;
+    border-radius: 5px;
+    font-size:14px;
+    padding:10px;
+    display:flex;
+    align-items: center;
+
+    i {
+      color: grey;
+    }
+  }
+
+  .multiselect__options {
+    display:block;
+    box-sizing: border-box;
+    left:0;
+    list-style: none;
+    padding-left:0px;
+    border:solid 1px #eee;
+    padding:5px 0px;
+  }
+
+  .multiselect__option {
+    display:flex;
+    align-items: center;
+    padding:6px 10px;
+    cursor:pointer;
+
+    &:hover {
+      background-color: #49BAEB;
+      color: white;
+    }
+      
+    &-checkbox {
+      margin-right:6px;
+    }
+  }
+}
