--- a/src/react-components/_react-components.scss
+++ b/src/react-components/_react-components.scss
@@ -268,7 +268,7 @@ strong {
   box-shadow: inset 0 0 0.5em #bebebe;
   border-radius: 4px;
 
-  .multiselect__selected {
+  .multiselect-selected {
     border: solid 1px #D9D9D9;
     border-radius: 5px;
     font-size: 14px;
@@ -281,7 +281,7 @@ strong {
     }
   }
 
-  .multiselect__options {
+  .multiselect-options {
     display: block;
     box-sizing: border-box;
     left: 0;
@@ -291,7 +291,7 @@ strong {
     padding: 5px 0px;
   }
 
-  .multiselect__option {
+  .multiselect-option {
     display: flex;
     align-items: center;
     padding: 6px 10px;
