--- a/src/react-components/_react-components.scss
+++ b/src/react-components/_react-components.scss
@@ -380,6 +380,7 @@ strong {
       border: 1px 1px 1px 0px solid #bebebe;
       text-align: left;
       min-height: 50px;
+      overflow-wrap: break-word;
   }
 }
 
