--- a/src/react-components/_react-components.scss
+++ b/src/react-components/_react-components.scss
@@ -403,6 +403,10 @@ strong {
 
     .popover-content {
         padding: 1em;
+        
+        i {
+          color: #bebebe;
+        }
     }
 
     .clear-icon {
@@ -432,15 +436,19 @@ strong {
 
     fieldset {
         margin-top: 0;
-    
+
         label {
             display: flex;
             align-items: center;
-            gap: 5px;
         }
 
         input[type=checkbox] {
             margin-top: 0;
+            margin-right: 0.1em;
+        }
+
+        .filter-checkbox, .input-with-clear-icon {
+          margin-bottom: 20px;
         }
     }
 
@@ -470,12 +478,24 @@ strong {
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-between;
+  
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover, 
+  input:-webkit-autofill:focus, 
+  input:-webkit-autofill:active {
+      transition: background-color 600000s 0s, color 600000s 0s;
+  }
+
+  input[data-autocompleted] {
+      background-color: transparent !important;
+  }
 
   input {
       all:unset;
       width:90%;
       height: 40px;
       text-indent: 10px;
+
       &:focus {
           box-shadow: none;
           height: 40px;
@@ -490,7 +510,6 @@ strong {
   button {
       all:unset;
       margin-right: 10px;
-      color: #bebebe;
   }
 
   &:focus-within { 
