OLMIS-7660: Add sticky position to header in mobile app

--- a/src/common/_headers.scss
+++ b/src/common/_headers.scss
@@ -51,6 +51,13 @@ h1, h3{
     font-weight: bold;
 }
 
+header {
+    @media screen and (max-width: $res-md) {
+        position: sticky;
+        top: 0;
+    }
+}
+
 header,
 .heading {
     display: flex;
