OLMIS-7838: updated undefined color

--- a/src/react-components/_react-components.scss
+++ b/src/react-components/_react-components.scss
@@ -826,8 +826,8 @@ strong {
 
   .proceed {
     border-radius: 4px;
-    border: 1px solid $mw-teal;
-    background: $mw-teal;
+    border: 1px solid $brand-blue;
+    background: $brand-blue;
     color: #fff;
     text-shadow: 0 0 0.1em #333;
     background-image: linear-gradient(to bottom, #1eb2bb, #1b9da5 10%, #17888f);
